[tool.semantic_release]
version_variable = [
    "fortifyapi/__init__.py:__version__",
    "pyproject.toml:version"
]

build_command = "pip install poetry && poetry build"
[tool.poetry]
name = "fortifyapi"
version = "3.1.5"
description = "Fortify API is a Python RESTFul API client module for Fortify Software Security Center"
authors = ["xolian <brandon@spruth.co>", "vestin"]
license = "MIT"
keywords=['fortify', 'api', 'security', 'software', 'microfocus', 'ssc', 'sast']
readme = "README.md"
packages = [
    { include = "fortifyapi" }
]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
urllib3 = ">=1.21.1,<1.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
