[bdist_wheel]
universal=1

[metadata]
license_files = LICENSE.txt

[bdist_rpm]
group = Security Tools
packager = Brandon Spruth <brandon.spruth@servicenow.com>
release = el7.centos
requires = /bin/rm
vendor = ServiceNow, Inc
force-arch = x86_64
description = Command line client for Fortify SSC Orchestration
provides = fortifyadmin
build-script = rpm/build
install-script = rpm/install
pre-uninstall = rpm/preuninstall
build_requires = python-setuptools
